--- a/more.tex
+++ b/more.tex
@@ -1716,7 +1716,7 @@ Run this code and follow the instructions you see there.
 
 \section{Serivce Oriented Architeture (SOA)}
 
-\section{Application Programming Intercaces (API)}
+\section{Application Programming Interfaces (API)}
 
 \section{eXtensible Markup Language (XML)}
 
